# LEO

./: CMakeLists.txt  README.md  main.cu  uvm_gcn.cu  uvm_gin.cu
configuration/: com-orkut_gcn.cfg  com-orkut_gin.cfg  enwiki-2013_gcn.cfg  enwiki-2013_gin.cfg  it-2004_gcn.cfg  it-2004_gin.cfg  papers100M_gcn.cfg  papers100M_gin.cfg  product_gcn.cfg  product_gcn_wo_cache.cfg  product_gin.cfg  proteins_gcn.cfg  reddit_gcn.cfg  reddit_gin.cfg
datagen/: papers100M.py  products.py  proteins.py
include/: cache.cpp  cache.h  cache_solver.cpp  cache_solver.h  common.cpp  common.h  freq_reorder.cpp  freq_reorder.h  graph.cpp  graph.h  logging.cpp  logging.h  model.cpp  model.h  param.cpp  param.h  partition.cpp  partition.h  run_config.cpp  run_config.h  timer.h  type.h
include/cuda/: aggregate.cu  aggregate.cuh  gnn_layer.cu  gnn_layer.cuh  graph.cu  kernel.cu  kernel.cuh  logging.cuh  model.cu  param.cu
src/: BandwidthTest.cu  Edgelist  edgelist.cpp  leo_2hop.cu  leo_LP.cu  leo_LP_Gorder.cu  leo_LP_Gorder_Pretrain.cu  leo_LP_Gorder_grain_div.cu  leo_LP_gat.cu  leo_LP_gat_Gorder.cu  leo_LP_gin.cu  leo_LP_gin_Gorder.cu  leo_gat.cu  leo_metis.cu  uvm_gat.cu  uvm_gcn.cu  uvm_gin.cu
